--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "production": "gulp --production"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.0",
-    "babelify": "^7.3.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "del": "^2.2.2",
+    "eslint": "^4.19.0",
+    "eslint-plugin-import": "^2.9.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "^0.0.2",
     "gulp-if": "^2.0.2",
     "gulp-uglify": "^2.1.0",
     "gulp-util": "^3.0.8",
+    "prettier-eslint-cli": "^4.7.1",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^7.0.2"
   },
   "dependencies": {
     "easystarjs": "^0.3.1",
-    "phaser": "^2.6.2"
+    "phaser-ce": "^2.10.2"
   }
 }
