--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "santa",
+  "name": "phaser-template",
   "version": "1.0.0",
   "author": "Andrew Katz <andrewkatz00@gmail.com>",
   "license": "MIT",
